# running-analytics-pipeline

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: streamlit_app.py
dbt/: dbt_project.yml  profiles.yml.example
dbt/macros/: generate_schema_name.sql  hr_band_range.sql  temperature_band_range.sql
dbt/seeds/: hr_bands.csv  seeds.yml  temperature_bands.csv
dbt/tests/: assert_band_candidates_exclusive_exhaustive.sql  assert_band_mart_accounts_for_every_qualifying_run.sql  assert_band_mart_accounts_for_every_valid_run.sql  assert_band_segments_mart_unique_per_run_band.sql  assert_band_segments_meet_dwell_minimum.sql  assert_band_segments_unique_per_run_band.sql  assert_band_weekly_matches_segment_mart.sql  assert_band_weekly_sufficiency_matches_threshold.sql  assert_band_weekly_unique_per_week_band.sql  assert_decoupling_null_iff_excluded.sql  assert_efficiency_only_with_heart_rate.sql  assert_exclusion_reason_matches_eligibility.sql  assert_fct_runs_no_null_derivations.sql  (+12 more)
docs/: PROJECT_PLAN.md
images/: README.md
orchestration/: README.md
sql/: bootstrap.sql  raw_strava.sql  raw_strava_coordinates.sql  raw_strava_streams.sql  raw_weather.sql
tests/: conftest.py  test_activity_ingestion.py  test_activity_pagination.py  test_app.py  test_coordinate_backfill.py  test_dag_parity.py  test_database_integration.py  test_dbt_dag.py  test_dbt_layering.py  test_dbt_models.py  test_stream_ingestion.py  test_token_refresh.py  test_weather_client.py  test_weather_ingestion.py
(+40 files in other folders)
