[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "running-pipeline"
version = "0.1.0"
description = "Incremental Strava + weather analytics pipeline (see docs/PROJECT_PLAN.md)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32",
    "pydantic-settings>=2.6",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "responses>=0.25",
    "ruff>=0.8",
]

[project.scripts]
running-pipeline = "running_pipeline.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/running_pipeline"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
